<resources>
    <string name="app_name">Button</string>
    <string name="hello">Hello World!</string>
    <string name="click">Click</string>
    <string name="button">Button</string>
    <string name="basic_button">Material Button</string>
    <string name="fab">FAB</string>
    <string name="unelevated_button">Unelevated Button</string>
    <string name="text_appearance">Text Appearance</string>
    <string name="text_button">Text Button</string>
    <string name="text_button2">Text Button</string>
    <string name="object_animator">objectAnimator</string>
    <string name="clickDefault">click default</string>
    <string name="animation">Animation</string>
    <string name="shadow">Shadow</string>
    <string name="explore">explore</string>
    <string name="features_of_button">Features of Button</string>
    <string name="button_with_only_text">Button with\nonly text:</string>
    <string name="button_with_only_image">Button with\nonly image:</string>
    <string name="button_both_text_and_image">Button with both\ntext and image:</string>
    <string name="types_of_button">Types of Button</string>
    <string name="outlined_button">Outlined Button</string>
    <string name="contained_button">Contained Button</string>
    <string name="toggle_button">Toggle Button</string>
    <string name="material_styles">Material Styles</string>
    <string name="borderless_button">Borderless Button</string>
    <string name="custom_background">Custom Background</string>
    <string name="textappearance_default">TextAppearance Default</string>
    <string name="textappearance_custom">TextAppearance Custom</string>
    <string name="textapp_secondary_custom">TextApp Secondary Custom</string>
    <string name="textapp_secondary_default">TextApp Secondary Default</string>
    <string name="text_appearance_secondary">Text Appearance Secondary</string>
    <string name="text_button_default">Text Button Default</string>
    <string name="text_button_custom">Text Button Custom</string>
    <string name="text_button1">Text Button1</string>
</resources>
