<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:gravity="center"
        android:text="@string/animation"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.button.MaterialButton
        android:id="@+id/materialButton6"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="156dp"
        android:layout_marginEnd="56dp"
        android:insetBottom="@dimen/dim_fab"
        android:text="@string/clickDefault"
        app:icon="@drawable/ic_add_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <android.support.design.button.MaterialButton
        android:id="@+id/materialButton"
        style="@style/materialButton"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginBottom="144dp"
        android:layout_marginStart="64dp"
        android:text="@string/click"
        android:textSize="25sp"
        app:icon="@drawable/ic_check_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_marginBottom="92dp"
        android:gravity="center"
        android:text="@string/basic_button"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintBottom_toTopOf="@+id/materialButton"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.design.button.MaterialButton
        android:id="@+id/materialButton7"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="145dp"
        android:layout_height="55dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="120dp"
        android:stateListAnimator="@animator/stroke_animation"
        android:text="@string/animation"
        android:translationZ="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="137dp"
        android:layout_height="69dp"
        android:layout_marginEnd="84dp"
        android:layout_marginTop="120dp"
        android:stateListAnimator="@animator/stroke_button2"
        android:text="@string/shadow"
        android:translationZ="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</android.support.constraint.ConstraintLayout>