<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".MainActivity">

    <android.support.design.card.MaterialCardView
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/features_of_button"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/colorAccent" />
            <View
                android:id="@+id/divider"
                android:layout_width="320dp"
                android:layout_height="1dp"
                android:layout_below="@id/header"
                android:background="@android:color/darker_gray" />
            <LinearLayout
                android:id="@+id/parentLinear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider"
                android:orientation="horizontal">
                <LinearLayout
                    android:id="@+id/textLinear"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="12dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:paddingTop="4dp"
                        android:text="@string/button_with_only_text"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Overline" />
                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Overline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:paddingTop="8dp"
                        android:text="@string/button_with_only_image" />
                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Overline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:paddingTop="8dp"
                        android:text="@string/button_both_text_and_image" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="8dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/button" />
                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_home_black_24dp" />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_check_black_24dp"
                        android:text="@string/click" />
                </LinearLayout>
            </LinearLayout>
            <android.support.design.button.MaterialButton
                android:id="@+id/explore1"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/parentLinear"
                android:layout_marginStart="8dp"
                android:text="@string/explore"
                android:textColor="@color/colorSecondary" />
        </RelativeLayout>
    </android.support.design.card.MaterialCardView>

    <android.support.design.card.MaterialCardView
        android:id="@+id/typesOfButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/headerTypes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/types_of_button"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/colorAccent" />

            <View
                android:id="@+id/dividerType"
                android:layout_width="300dp"
                android:layout_height="1dp"
                android:layout_below="@id/headerTypes"
                android:background="@android:color/darker_gray" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/dividerType"
                android:id="@+id/parentLinearTypes">
            <LinearLayout
                android:id="@+id/textLinearTypes"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/text_button2"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/outlined_button"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/contained_button"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/toggle_button"/>
            </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="4dp"
                    android:paddingEnd="12dp"
                    android:padding="8dp">

                    <android.support.design.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:text="@string/button"/>
                    <Button
                        android:id="@+id/outlined"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button"
                        android:background="@drawable/outlined_shape"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button"
                        style="@style/Widget.MaterialComponents.Button"/>
                    <ToggleButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/toggle"
                        style="@style/Base.Widget.AppCompat.DrawerArrowToggle"/>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </android.support.design.card.MaterialCardView>

    <android.support.design.card.MaterialCardView
        android:id="@+id/materialButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/typesOfButton">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/materialHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/material_styles"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/colorAccent"
                android:padding="12dp"/>
            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/materialHeader"
                android:background="@android:color/darker_gray" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@id/divider2"
                    android:id="@+id/linear"
                    android:gravity="center">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginEnd="12dp"
                        >
                    <android.support.design.button.MaterialButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/basic_button"
                        android:id="@+id/basicButton"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp"
                        style="@style/Widget.MaterialComponents.Button"/>
                        <android.support.design.button.MaterialButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_button"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:id="@+id/textButton"
                            style="@style/Widget.MaterialComponents.Button"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginStart="12dp"
                        >
                        <android.support.design.button.MaterialButton
                            android:id="@+id/textAppearance"
                            style="@style/Widget.MaterialComponents.Button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/text_appearance" />
                        <android.support.design.button.MaterialButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/fab"
                            style="@style/Widget.MaterialComponents.Button"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:id="@+id/fab"/>
                    </LinearLayout>
                </LinearLayout>
                    <android.support.design.button.MaterialButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/linear"
                        android:text="@string/unelevated_button"
                        android:layout_marginStart="75dp"
                        android:layout_marginEnd="75dp"
                        android:layout_marginBottom="8dp"
                        style="@style/Widget.MaterialComponents.Button"
                        android:id="@+id/unelevatedButton"/>
        </RelativeLayout>
    </android.support.design.card.MaterialCardView>
</android.support.constraint.ConstraintLayout>